--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
             <a href="#">03-7259372</a>
             <a href="#">floranusantara@gmail.com</a>
             <a href="#">Kota Bharu, Kelantan</a>
-            <img src="images/payment.png" alt="">
+            <img src="payment.png" alt="">
         </div>
 
     </div>
